# ArhamOS

./: .gitignore  ENGINEERING_SPEC.md  HANDOFF.md  LLM_CONTEXT.md  PROMPT.md  README.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  PROJECT.md  ROADMAP.md  STATE.md
docs/adr/: README.md
scripts/: browser_test.py  editor_test.py  extract_problem.py  full_pipeline.py  inject_test.py  language_test.py  leetcode_browser_test.py  session_test.py
src/arhamos/: main.py
src/arhamos/cli/: menu.py
src/arhamos/config/: selectors.py
src/arhamos/core/: config.py  llm.py
src/arhamos/models/: result.py
src/arhamos/skills/: leetcode.py
src/arhamos/tools/: browser.py  editor.py  leetcode.py  leetcode_page.py  result.py  session.py
src/arhamos/workflows/: base.py  leetcode.py  leetcode_workflow.py
src/core/: llm.py
user_data/: Local State
user_data/Default/: Favicons  History  Preferences  Secure Preferences  Web Data
user_data/Default/DawnGraphiteCache/: index
user_data/Default/DawnWebGPUCache/: index
user_data/Default/Extension Rules/: LOG
user_data/Default/Extension Scripts/: LOG
user_data/Default/Extension State/: LOG  LOG.old
user_data/Default/GPUCache/: data_0  data_1  data_2  index
user_data/Default/Network/: Cookies  Network Persistent State  (+2 more)
user_data/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  index
user_data/ShaderCache/: index
user_data/segmentation_platform/: ukm_db
(+316 files in other folders)
